# jubilant-octo-rotary-phone

./: .gitignore  README.md  hello.py  initial_system_prompt.json  pyproject.toml  system_prompt.txt
lrc/: __init__.py  chat_session.py  cli.py  config.py  diff_apply.py  memory_store.py  prompt_store.py  tools.py
