[project]
name = "lrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.6.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "numpy"
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]

[project.scripts]
lrc = "lrc.cli:main"

[tool.pyright]
include = ["lrc"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
